Fixing overflow of body.

--- a/css/main.css
+++ b/css/main.css
@@ -8,11 +8,17 @@
 * {
    box-sizing: border-box;
 }
+body {
+   overflow-x: hidden;
+}
 .bumped-dark {
    box-shadow: 0px 0px 6px rgba(0, 0, 0, 1),
       inset 0px 0px 4px rgba(0, 0, 0, 1),
       inset 0px 0px 12px rgba(0, 0, 0, 0.8),
       inset 0px 0px 20px rgba(0, 0, 0, 0.6);
+}
+.hides {
+   overflow: hidden;
 }
 header {
    background-color: #545454;
